--- a/MSV/pom.xml
+++ b/MSV/pom.xml
@@ -33,6 +33,11 @@
             <version>1.18.10</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
