--- a/test_MSV/pom.xml
+++ b/test_MSV/pom.xml
@@ -34,6 +34,7 @@
                     <dbAddress>localhost</dbAddress>
                     <dbPort>27017</dbPort>
                     <fileLocation>./src/main/resources/msv</fileLocation>
+                    <outputLocation>E:\MyProject\szakdolgozat\tocsv</outputLocation>
                 </configuration>
             </plugin>
         </plugins>
