Add revert an finish csv generator

--- a/test_MSV/pom.xml
+++ b/test_MSV/pom.xml
@@ -35,6 +35,7 @@
                     <dbPort>27017</dbPort>
                     <fileLocation>./src/main/resources/msv</fileLocation>
                     <outputLocation>E:\MyProject\szakdolgozat\tocsv</outputLocation>
+                    <revertVersion>${revertVersion}</revertVersion>
                 </configuration>
             </plugin>
         </plugins>
