--- a/MSV/pom.xml
+++ b/MSV/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
