--- a/MSV/pom.xml
+++ b/MSV/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 
-    <groupId>hu.msv</groupId>
+    <groupId>com.github.bex1111</groupId>
     <artifactId>msv-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>0.0.1</version>
