--- a/MSV/pom.xml
+++ b/MSV/pom.xml
@@ -9,7 +9,29 @@
     <artifactId>msv-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>0.2.1</version>
+    <name>Mongo Script Versioning</name>
+    <description>Migration tool for mongoDB</description>
+    <url>https://github.com/bex1111/mongo-script-versioning</url>
 
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>bex1111</name>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/bex1111/mongo-script-versioning.git</connection>
+        <developerConnection>scm:git:https://github.com/bex1111/mongo-script-versioning.git</developerConnection>
+        <url>https://github.com/bex1111/mongo-script-versioning</url>
+    </scm>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
