--- a/MSV/pom.xml
+++ b/MSV/pom.xml
@@ -8,7 +8,7 @@
     <groupId>com.github.bex1111</groupId>
     <artifactId>msv-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>0.2.1</version>
+    <version>0.2.1-SNAPSHOT</version>
     <name>Mongo Script Versioning</name>
     <description>Migration tool for mongoDB</description>
     <url>https://github.com/bex1111/mongo-script-versioning</url>
@@ -92,25 +92,25 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <localCheckout>true</localCheckout>
+                    <pushChanges>false</pushChanges>
+                    <mavenExecutorId>forked-path</mavenExecutorId>
+                    <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.9.5</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-release-plugin</artifactId>
-            <version>2.5.3</version>
-            <configuration>
-                <localCheckout>true</localCheckout>
-                <pushChanges>false</pushChanges>
-                <mavenExecutorId>forked-path</mavenExecutorId>
-                <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
-            </configuration>
-            <dependencies>
-                <dependency>
-                    <groupId>org.apache.maven.scm</groupId>
-                    <artifactId>maven-scm-provider-gitexe</artifactId>
-                    <version>1.9.5</version>
-                </dependency>
-            </dependencies>
-        </plugin>
     </build>
 
 
