--- a/MSV/pom.xml
+++ b/MSV/pom.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
 
     <groupId>com.github.bex1111</groupId>
     <artifactId>msv-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.1</version>
     <name>Mongo Script Versioning</name>
     <description>Migration tool for mongoDB</description>
     <url>https://github.com/bex1111/mongo-script-versioning</url>
@@ -31,7 +29,8 @@
         <connection>scm:git:git://github.com/bex1111/mongo-script-versioning.git</connection>
         <developerConnection>scm:git:https://github.com/bex1111/mongo-script-versioning.git</developerConnection>
         <url>https://github.com/bex1111/mongo-script-versioning</url>
-    </scm>
+      <tag>msv-maven-plugin-0.2.1</tag>
+  </scm>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
