--- a/MSV/pom.xml
+++ b/MSV/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.github.bex1111</groupId>
     <artifactId>msv-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>0.2.1</version>
+    <version>0.3.0-SNAPSHOT</version>
     <name>Mongo Script Versioning</name>
     <description>Migration tool for mongoDB</description>
     <url>https://github.com/bex1111/mongo-script-versioning</url>
@@ -29,7 +29,7 @@
         <connection>scm:git:git://github.com/bex1111/mongo-script-versioning.git</connection>
         <developerConnection>scm:git:https://github.com/bex1111/mongo-script-versioning.git</developerConnection>
         <url>https://github.com/bex1111/mongo-script-versioning</url>
-      <tag>msv-maven-plugin-0.2.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
